--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body, html {
     padding: 0;
 }
 #background-image {
-    background-image: url(/images/pexels-gaspar-zaldo-6739178.png);
+    background-image: url(../images/pexels-gaspar-zaldo-6739178.png);
 
      /* Full height */
     height: 100%;
@@ -16,7 +16,7 @@ body, html {
     background-size: cover;
 }
 #background-quang{
-    background-image: url(/images/pexels-gaspar-zaldo-6739178.png);
+    background-image: url(../images/pexels-gaspar-zaldo-6739178.png);
 
     /* Full height */
     height: 100%;
@@ -26,7 +26,16 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-   
+}
+
+#background-fish{
+    background-image: url("../images/pexels-quang-nguyen-vinh-2166694.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+    width: 100%;
+    background-attachment: fixed;
+    
 }
 
 .text-white {
@@ -41,12 +50,17 @@ body, html {
     text-shadow: 3px 2px black;
     font-size: 2rem;
 }
-.bacground-transparent {
-    background-color: transparent;
-}
+
 .store-header {
     height: 3rem;
     justify-content: center;
     
     background-color: transparent;
+}
+
+.w3-display-container {
+    border: black 1px solid;
+}
+.w3-card{
+    margin-bottom: 10px;
 }
